--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^5.7.1",
     "@react-three/drei": "^9.112.0",
     "@react-three/fiber": "^8.17.6",
     "clsx": "^2.1.1",
     "framer-motion": "^11.4.0",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "14.2.7",
+    "next": "^14.2.12",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
